# analysis

./: .gitignore  README.md  pyproject.toml
backend/: ai_engine.py  main.py  snowflake_db.py  sql_builder.py
frontend/: index.html
