[project]
name = "ai-data-analyst"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.136.3",
    "google-generativeai>=0.8.6",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
    "snowflake-connector-python[secure-local-storage]>=4.6.0",
    "uvicorn>=0.48.0",
]
